--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
 
     <!-- css link -->
-    <link rel="stylesheet"sdf href="style.css">
+    <link rel="stylesheet" sdf href="style.css">
 
     <!-- favicon -->
     <link rel="shortcut icon" href="snowflake.png" type="image/x-icon">
@@ -20,22 +20,34 @@
 
 <body>
     <!-- header section -->
-    <header class="bg-primary text-white text-center py-2">
+    <header class="gradient text-white text-center py-2">
         <div class="container">
-            <h1 class="display-4 mage">Mad Lib: Winter Wonderland❄️</h1>
-            <p class="lead">Check out our super duper awesome Mad Lib: Winter Wonderland Edition!!☃️</p>
+            <h1 class="display-4 mage">Mad Lib: Winter Wonderland</h1>
+            <p class="lead mage">Check out our super duper awesome Mad Lib: Winter Wonderland Edition!!☃️</p>
         </div>
     </header>
 
     <!-- Main Section -->
     <div class="container my-4">
-        <div id="madLibOutput" class="text-center penguin">
-            <!-- MAD LIB WILL GO HERE -->
+        <div class="row">
+            <div class="col-md-2 col-12">
+                <img src="snowman.png" alt="" class="img-fluid">
+            </div>
+            <div class="col-md-8 col-12">
+                <div id="madLibOutput" class="text-center penguin">
+                <!-- MAD LIB WILL GO HERE -->
+            </div>
+            </div>
+            
+            <div class="col-md-2 col-12">
+                <img src="snowflake2.png" alt="" class="img-fluid">
+            </div>
         </div>
+
     </div>
 
     <!-- footer section -->
-    <footer class="bg-primary text-white text-center py-2 fixed-bottom mage">
+    <footer class="grad text-white text-center py-2 fixed-bottom mage">
         <div class="container">
             <p>&copy; 2023 WDPP Level 2</p>
             <p>Designed by Ayat Sakalla</p>
